1.1.3-beta:
- Fixed a problem in the modular storage where shift-clicking an item into the storage from the gui would void items if the storage was full

1.1.2-beta:
- Fixed a crash in the tooltip of the storage modules

1.1.1-beta:
- Dependency fix

1.1.0-beta:
- Better tooltips
- Re-implemented TOP support for all blocks
- New 'sort mode' button in the Storage Scanner allowing you to sort the items in the list
- Better layout for the Storage Scanner
- Moved the dump and storage control modules from RFTools Utility to RFTools Storage
- The Storage Scanner Module can now be inserted in the RFTools Base tablet giving remote access to the scanner
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

1.0.3-alpha:
- Re-implemented the filter module for the Modular Storage

1.0.2-alpha:
- Fixed a problem where the storage scanner would not correctly show items with amounts greater than 127
- Fixed a problem with these amounts not being rendered at the correct spot
- Fixed another bug where trying to request an item of which there is a lot didn't actually do anything

1.0.1-alpha:
- Fixed a problem with the modular storage inventory slots not being moved properly in case of different gui scale

1.0.0-alpha:
- First port to 1.15.2

0.0.7:
- Updates to latest McJtyLib

0.0.6:
- Updates to latest McJtyLib
- The storage scanner now also supports the information screen (currently only for the upcoming crafting manager)

0.0.5:
- Avoid a rare crash during model registration
- Fixed a serious networking problem which could cause 'invalid discriminator spam' on servers

0.0.4-alpha :
- Fixed a networking problem on servers

0.0.3-alpha:
- Updates to the latest McJtyLib
- The Storage Scanner is back!

0.0.2-alpha:
- First version of the modular storage block
