@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed various problems with modular storage. It was mostly broken after last update
+
 1.1.3-beta:
 - Fixed a problem in the modular storage where shift-clicking an item into the storage from the gui would void items if the storage was full
 
